// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ConnectedHeader renders the ConnectedHeader component 1`] = `
Object {
  "children": Array [
    <nav
      className="navbar navbar-expand-md navbar-light header-logo-navbar"
    >
      <Link
        className="navbar-brand"
        to="/"
      >
        <img
          alt="Reveal"
          src="https://github.com/onaio/reveal-frontend/raw/b0756b0c1ed95dc6db23dc4fd1375c81bdf7fb1b/src/assets/images/thai-logo.png"
        />
      </Link>
    </nav>,
    <NavbarToggler
      onClick={[Function]}
      tag="button"
      type="button"
    />,
    <Collapse
      appear={false}
      enter={true}
      exit={true}
      in={false}
      isOpen={false}
      mountOnEnter={false}
      navbar={true}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      tag="div"
      timeout={350}
      unmountOnExit={false}
    >
      <Nav
        className="mr-auto"
        navbar={true}
        tag="ul"
        vertical={false}
      >
        <NavItem
          tag="li"
        >
          <NavLink
            activeClassName="active"
            className="nav-link active"
            to="/"
          >
            Home
          </NavLink>
        </NavItem>
        <UncontrolledDropdown
          inNavbar={true}
          nav={true}
        >
          <DropdownToggle
            aria-haspopup={true}
            caret={true}
            className="nav-link"
            color="secondary"
            nav={true}
          >
            Plan
          </DropdownToggle>
          <DropdownMenu
            flip={true}
            right={true}
            tag="div"
          >
            <DropdownItem
              tag="button"
              toggle={true}
            >
              <NavLink
                activeClassName="active"
                className="nav-link"
                to="/plans/list"
              >
                Manage Plans
              </NavLink>
            </DropdownItem>
          </DropdownMenu>
        </UncontrolledDropdown>
        <NavItem
          tag="li"
        >
          <NavLink
            activeClassName="active"
            className="nav-link"
            to="/assign"
          >
            Assign
          </NavLink>
        </NavItem>
        <UncontrolledDropdown
          inNavbar={true}
          nav={true}
        >
          <DropdownToggle
            aria-haspopup={true}
            caret={true}
            className="nav-link"
            color="secondary"
            nav={true}
          >
            Monitor
          </DropdownToggle>
          <DropdownMenu
            flip={true}
            right={true}
            tag="div"
          >
            <div>
              <DropdownItem
                tag="button"
                toggle={true}
              >
                <NavLink
                  activeClassName="active"
                  className="nav-link"
                  to="/focus-investigation"
                >
                  Focus Investigation
                </NavLink>
              </DropdownItem>
            </div>
            <div>
              <DropdownItem
                tag="button"
                toggle={true}
              >
                <NavLink
                  activeClassName="active"
                  className="nav-link"
                  to="/intervention/irs/report"
                >
                  IRS Reporting
                </NavLink>
              </DropdownItem>
            </div>
            <div>
              <DropdownItem
                tag="button"
                toggle={true}
              >
                <NavLink
                  activeClassName="active"
                  className="nav-link"
                  to="/intervention/irs-lite/report"
                >
                  IRS Lite Reporting
                </NavLink>
              </DropdownItem>
            </div>
            <div>
              <DropdownItem
                tag="button"
                toggle={true}
              >
                <NavLink
                  activeClassName="active"
                  className="nav-link"
                  to="/intervention/irs/performance/report"
                >
                  IRS Performance Reporting
                </NavLink>
              </DropdownItem>
            </div>
            <div>
              <DropdownItem
                tag="button"
                toggle={true}
              >
                <NavLink
                  activeClassName="active"
                  className="nav-link"
                  to="/intervention/irs/mopup"
                >
                  IRS Mop-up Reporting
                </NavLink>
              </DropdownItem>
            </div>
            <div>
              <DropdownItem
                tag="button"
                toggle={true}
              >
                <NavLink
                  activeClassName="active"
                  className="nav-link"
                  to="/intervention/mda-point/report"
                >
                  MDA Point Reporting
                </NavLink>
              </DropdownItem>
            </div>
            <div>
              <DropdownItem
                tag="button"
                toggle={true}
              >
                <NavLink
                  activeClassName="active"
                  className="nav-link"
                  to="/intervention/mda/report"
                >
                  MDA Reporting
                </NavLink>
              </DropdownItem>
            </div>
          </DropdownMenu>
        </UncontrolledDropdown>
        <UncontrolledDropdown
          inNavbar={true}
          nav={true}
        >
          <DropdownToggle
            aria-haspopup={true}
            caret={true}
            className="nav-link"
            color="secondary"
            nav={true}
          >
            Admin
          </DropdownToggle>
          <DropdownMenu
            flip={true}
            right={true}
            tag="div"
          >
            <DropdownItem
              tag="button"
              toggle={true}
            >
              <NavLink
                activeClassName="active"
                className="nav-link"
                to="/teams"
              >
                Teams
              </NavLink>
            </DropdownItem>
            <DropdownItem
              tag="button"
              toggle={true}
            >
              <NavLink
                activeClassName="active"
                className="nav-link"
                to="/practitioners"
              >
                Practitioners
              </NavLink>
            </DropdownItem>
            <div>
              <DropdownItem
                tag="button"
                toggle={true}
              >
                <NavLink
                  activeClassName="active"
                  className="nav-link"
                  to="/clients"
                >
                  Clients
                </NavLink>
              </DropdownItem>
            </div>
          </DropdownMenu>
        </UncontrolledDropdown>
      </Nav>
      <Nav
        className="ml-0"
        navbar={true}
        tag="ul"
        vertical={false}
      >
        <NavLink
          activeClassName="active"
          className="nav-link"
          to="/fe/login"
        >
          Login
        </NavLink>
      </Nav>
    </Collapse>,
  ],
  "expand": "md",
  "light": true,
  "tag": "nav",
}
`;

exports[`components/ConnectedHeader renders the ConnectedHeader when logged in 1`] = `
Object {
  "children": Array [
    <nav
      className="navbar navbar-expand-md navbar-light header-logo-navbar"
    >
      <Link
        className="navbar-brand"
        to="/"
      >
        <img
          alt="Reveal"
          src="https://github.com/onaio/reveal-frontend/raw/b0756b0c1ed95dc6db23dc4fd1375c81bdf7fb1b/src/assets/images/thai-logo.png"
        />
      </Link>
    </nav>,
    <NavbarToggler
      onClick={[Function]}
      tag="button"
      type="button"
    />,
    <Collapse
      appear={false}
      enter={true}
      exit={true}
      in={false}
      isOpen={false}
      mountOnEnter={false}
      navbar={true}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      tag="div"
      timeout={350}
      unmountOnExit={false}
    >
      <Nav
        className="mr-auto"
        navbar={true}
        tag="ul"
        vertical={false}
      >
        <NavItem
          tag="li"
        >
          <NavLink
            activeClassName="active"
            className="nav-link active"
            to="/"
          >
            Home
          </NavLink>
        </NavItem>
        <UncontrolledDropdown
          inNavbar={true}
          nav={true}
        >
          <DropdownToggle
            aria-haspopup={true}
            caret={true}
            className="nav-link"
            color="secondary"
            nav={true}
          >
            Plan
          </DropdownToggle>
          <DropdownMenu
            flip={true}
            right={true}
            tag="div"
          >
            <DropdownItem
              tag="button"
              toggle={true}
            >
              <NavLink
                activeClassName="active"
                className="nav-link"
                to="/plans/list"
              >
                Manage Plans
              </NavLink>
            </DropdownItem>
          </DropdownMenu>
        </UncontrolledDropdown>
        <NavItem
          tag="li"
        >
          <NavLink
            activeClassName="active"
            className="nav-link"
            to="/assign"
          >
            Assign
          </NavLink>
        </NavItem>
        <UncontrolledDropdown
          inNavbar={true}
          nav={true}
        >
          <DropdownToggle
            aria-haspopup={true}
            caret={true}
            className="nav-link"
            color="secondary"
            nav={true}
          >
            Monitor
          </DropdownToggle>
          <DropdownMenu
            flip={true}
            right={true}
            tag="div"
          >
            <div>
              <DropdownItem
                tag="button"
                toggle={true}
              >
                <NavLink
                  activeClassName="active"
                  className="nav-link"
                  to="/focus-investigation"
                >
                  Focus Investigation
                </NavLink>
              </DropdownItem>
            </div>
            <div>
              <DropdownItem
                tag="button"
                toggle={true}
              >
                <NavLink
                  activeClassName="active"
                  className="nav-link"
                  to="/intervention/irs/report"
                >
                  IRS Reporting
                </NavLink>
              </DropdownItem>
            </div>
            <div>
              <DropdownItem
                tag="button"
                toggle={true}
              >
                <NavLink
                  activeClassName="active"
                  className="nav-link"
                  to="/intervention/irs-lite/report"
                >
                  IRS Lite Reporting
                </NavLink>
              </DropdownItem>
            </div>
            <div>
              <DropdownItem
                tag="button"
                toggle={true}
              >
                <NavLink
                  activeClassName="active"
                  className="nav-link"
                  to="/intervention/irs/performance/report"
                >
                  IRS Performance Reporting
                </NavLink>
              </DropdownItem>
            </div>
            <div>
              <DropdownItem
                tag="button"
                toggle={true}
              >
                <NavLink
                  activeClassName="active"
                  className="nav-link"
                  to="/intervention/irs/mopup"
                >
                  IRS Mop-up Reporting
                </NavLink>
              </DropdownItem>
            </div>
            <div>
              <DropdownItem
                tag="button"
                toggle={true}
              >
                <NavLink
                  activeClassName="active"
                  className="nav-link"
                  to="/intervention/mda-point/report"
                >
                  MDA Point Reporting
                </NavLink>
              </DropdownItem>
            </div>
            <div>
              <DropdownItem
                tag="button"
                toggle={true}
              >
                <NavLink
                  activeClassName="active"
                  className="nav-link"
                  to="/intervention/mda/report"
                >
                  MDA Reporting
                </NavLink>
              </DropdownItem>
            </div>
          </DropdownMenu>
        </UncontrolledDropdown>
        <UncontrolledDropdown
          inNavbar={true}
          nav={true}
        >
          <DropdownToggle
            aria-haspopup={true}
            caret={true}
            className="nav-link"
            color="secondary"
            nav={true}
          >
            Admin
          </DropdownToggle>
          <DropdownMenu
            flip={true}
            right={true}
            tag="div"
          >
            <DropdownItem
              tag="button"
              toggle={true}
            >
              <NavLink
                activeClassName="active"
                className="nav-link"
                to="/teams"
              >
                Teams
              </NavLink>
            </DropdownItem>
            <DropdownItem
              tag="button"
              toggle={true}
            >
              <NavLink
                activeClassName="active"
                className="nav-link"
                to="/practitioners"
              >
                Practitioners
              </NavLink>
            </DropdownItem>
            <div>
              <DropdownItem
                tag="button"
                toggle={true}
              >
                <NavLink
                  activeClassName="active"
                  className="nav-link"
                  to="/clients"
                >
                  Clients
                </NavLink>
              </DropdownItem>
            </div>
          </DropdownMenu>
        </UncontrolledDropdown>
      </Nav>
      <Nav
        className="ml-0"
        navbar={true}
        tag="ul"
        vertical={false}
      >
        <UncontrolledDropdown
          inNavbar={true}
          nav={true}
        >
          <DropdownToggle
            aria-haspopup={true}
            caret={true}
            color="secondary"
            nav={true}
          >
            <FontAwesomeIcon
              icon={
                Array [
                  "far",
                  "user",
                ]
              }
            />
             
            RobertBaratheon
          </DropdownToggle>
          <DropdownMenu
            flip={true}
            right={true}
            tag="div"
          >
            <DropdownItem
              tag="button"
              toggle={true}
            >
              <NavLink
                activeClassName="active"
                className="nav-link"
                to="/logout"
              >
                Sign Out
              </NavLink>
            </DropdownItem>
          </DropdownMenu>
        </UncontrolledDropdown>
      </Nav>
    </Collapse>,
  ],
  "expand": "md",
  "light": true,
  "tag": "nav",
}
`;
